# halab-webapp-drf-react

./: README.md
backend/: .gitignore  Makefile  README.rst  commands.txt  pyproject.toml
backend/dash-app/: dash_app.py
backend/dash-app/assets/: header.css
backend/lg-webapp/: manage.py
backend/lg-webapp/halab/: admin.py  apps.py  models.py  tests.py  urls.py
backend/lg-webapp/halab/migrations/: 0001_initial.py  0002_initial.py
backend/lg-webapp/halab_api/: apps.py  serializers.py  tests.py  urls.py  views.py
backend/lg-webapp/project/: .env  settings.py  urls.py
backend/lg-webapp/templates/halab/: dash-base.html
backend/lg-webapp/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/lg-webapp/users/migrations/: 0001_initial.py
frontend/lg-webapp-react/: commands.txt  package-lock.json  package.json
frontend/lg-webapp-react/public/: test-measures-cordless.json  test-measures-robot.json  test-measures-temp.json  test-measures.json
frontend/lg-webapp-react/src/: Admin.js  App.js  App.module.css  axios.js  index.css  index.js
frontend/lg-webapp-react/src/components/: Footer.js  Header.js  PostLists.js  Posts.js  Search.js  Single.js  single.js
frontend/lg-webapp-react/src/components/Admin/: AdminPosts.js  CreatePost.module.css  EditPost.js  ProductCreate.js  ProductDelete.js  ProductEdit.js  ProductsAdmin.js
frontend/lg-webapp-react/src/components/Auth/: AuthContext.js  Login.js  Logout.js
frontend/lg-webapp-react/src/context/: TestContext.jsx
frontend/lg-webapp-react/src/store/: TestContext.jsx
(+108 files in other folders)
